# osrs-bank-sync

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  build.gradle  runelite-plugin.properties  settings.gradle
.github/workflows/: ci.yml
gradle/wrapper/: gradle-wrapper.properties
scripts/: release.sh
src/main/java/io/kyil/osrsbanksync/: AccountTypeMapper.java  BankCaptureService.java  BankItem.java  BankSnapshot.java  BankSubmitter.java  BankSyncButton.java  OsrsBankSyncConfig.java  OsrsBankSyncPlugin.java  StringUtils.java  SubmitResult.java  TargetUrlValidator.java
src/test/java/io/kyil/osrsbanksync/: AccountTypeMapperTest.java  BankCaptureServiceTest.java  BankSnapshotSerializationTest.java  BankSubmitterTest.java  StringUtilsTest.java  TargetUrlValidatorTest.java
stub_server/: README.md  pyproject.toml  sample.json
stub_server/src/osrs_bank_sync_stub/: app.py  schemas.py
stub_server/tests/: test_app.py
