[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "osrs-bank-sync-stub"
version = "0.1.0"
description = "FastAPI stub server for osrs-bank-sync Phase 2.1 development"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/osrs_bank_sync_stub"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
